--- a/python_code.ipynb
+++ b/python_code.ipynb
@@ -1,9 +1,28 @@
-
-# Myself Hrishikesh  Thakur.
-#following notebook is created for completing the capestone project of Applied Data Science
-
-import numpy as np
-import pandas as pd
-
-
-print("Hello Capstone Project Course!")
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": 3
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
