--- a/python_code.ipynb
+++ b/python_code.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Hello Capstone Project Course!\n"
+    }
+   ],
+   "source": [
+    "# Myself Hrishikesh  Thakur.\n",
+    "#following notebook is created for completing the capestone project of Applied Data Science\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "print(\"Hello Capstone Project Course!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -19,9 +43,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.4-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
